# polynomial-roots-fractal

./: .gitignore  Cargo.toml  Readme.md
projects/: exports.m
projects/image/roots10-16/: main.m
projects/image/roots17-20/: main.m
projects/image/roots25-36/: main.m
projects/parallel/: Cargo.toml  readme.md
projects/parallel/src/: lib.rs  main.rs
projects/parallel/src/commands/: database.rs  evaluate.rs  mod.rs
projects/parallel/src/db/: littlewood.rs  mod.rs  point.rs
projects/parallel/src/errors/: mod.rs
projects/parallel/src/helpers/: mod.rs
projects/random-image/: Cargo.toml
projects/random-image/src/: lib.rs  main.rs
projects/random-image/src/commands/: database.rs  evaluate.rs  mod.rs
projects/random-image/src/db/: littlewood.rs
projects/random-image/src/errors/: mod.rs
projects/random-image/src/helpers/: mod.rs
projects/roots17-20/: Readme.md
projects/roots21-24/: main.m
projects/roots25-36/: readme.md
