[package]
name = "sub_projects"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
nalgebra = "0.23"
itertools = "0.9"
rayon = "1.5"
wolfram_wxf = "0.5"

[dev-dependencies]

[features]
default = []
