[package]
name = "polynomial-roots"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "../../Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
nalgebra = "0.32.3"
itertools = "0.12.0"
rayon = "1.8.0"
sled = "0.34.7"
wolfram_wxf = "0.6.6"
indicatif = "0.17.7"

[dev-dependencies]

[features]
default = []
